--- a/alumnos.html
+++ b/alumnos.html
@@ -1,74 +1,57 @@
-<div class="row">
-    <div class="col-6">
-        <form method="post" id="frmAlumnos" data-idalumno="-1" data-accion="nuevo">
-            <div class="card text-bg-dark mb-3">
-                <div class="card-header border-success">Registro de Alumnos</div>
-                <div class="card-body">
-                    <div class="row p-1">
-                        <div class="col-3">CODIGO:</div>
-                        <div class="col-3">
-                            <input required type="text" name="txtCodigoAlumnos" id="txtCodigoAlumnos" class="form-control">
-                        </div>
-                    </div>
-                    <div class="row p-1">
-                        <div class="col-3">NOMBRE:</div>
-                        <div class="col-6">
-                            <input required type="text" name="txtNombreAlumnos" id="txtNombreAlumnos" class="form-control">
-                        </div>
-                    </div>
-                    <div class="row p-1">
-                        <div class="col-3">DIRECCION:</div>
-                        <div class="col-9">
-                            <input required type="text" name="txtDireccionAlumnos" id="txtDireccionAlumnos" class="form-control">
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-3">TELEFONO:</div>
-                        <div class="col-3">
-                            <input required type="text" name="txtTelefonoAlumnos" id="txtTelefonoAlumnos" class="form-control">
-                        </div>
-                    </div>
-                </div>
-                <div class="card-footer bg-transparent border-success">
-                    <div class="row">
-                        <div class="col text-center">
-                            <input type="reset" value="Nuevo" class="btn btn-danger">
-                            <input type="submit" value="Guardar" class="btn btn-success">
-                        </div>
-                    </div>
+<form method="post" id="frmAlumnos" data-idalumno="-1" data-accion="nuevo">
+    <div class="card text-bg-dark mb-3" style="width: 600px;">
+        <div class="card-header border-success">
+            <div data-bs-theme="dark" class="d-flex">
+                <div>Registro de Alumnos</div>
+                <div class="ms-auto">
+                    <button type="button" class="btn-close close" data-form="alumnos"></button>
                 </div>
             </div>
-        </form>
-    </div>
-    <div class="col-6">
-        <div class="card text-bg-dark mb-3">
-            <div class="card-header border-success">Consulta de Alumnos</div>
-            <div class="card-body">
-                <div class="row p-1">
-                    <div class="col">
-                        <table class="table table-sm table-hover table-dark" id="tblConsultaAlumnos">
-                            <thead>
-                                <tr>
-                                    <th>CODIGO</th>
-                                    <th>NOMBRE</th>
-                                    <th>DIRECCION</th>
-                                    <th>TEL</th>
-                                    <th></th>
-                                </tr>
-                            </thead>
-                            <tbody> </tbody>
-                        </table>
-                    </div>
-                </div>  
+        </div>
+        <div class="card-body">
+            <div class="row p-1">
+                <div class="col-3">CODIGO:</div>
+                <div class="col-3">
+                    <input required type="text" name="txtCodigoAlumnos" id="txtCodigoAlumnos" class="form-control">
+                </div>
+            </div>
+            <div class="row p-1">
+                <div class="col-3">NOMBRE:</div>
+                <div class="col-6">
+                    <input required type="text" name="txtNombreAlumnos" id="txtNombreAlumnos" class="form-control">
+                </div>
+            </div>
+            <div class="row p-1">
+                <div class="col-3">DIRECCION:</div>
+                <div class="col-9">
+                    <input required type="text" name="txtDireccionAlumnos" id="txtDireccionAlumnos" class="form-control">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-3">TELEFONO:</div>
+                <div class="col-3">
+                    <input required type="text" name="txtTelefonoAlumnos" id="txtTelefonoAlumnos" class="form-control">
+                </div>
+            </div>
+        </div>
+        <div class="card-footer bg-transparent border-success">
+            <div class="row">
+                <div class="col text-center">
+                    <input type="reset" value="Nuevo" class="btn btn-danger">
+                    <input type="submit" value="Guardar" class="btn btn-success">
+                    <button id="btnBuscarAlumno" class="btn btn-primary">Buscar Alumnos</button>
+                </div>
             </div>
         </div>
     </div>
-</div>
+</form>
 <script>
-    mostrarDatosAlumnos();
+    btnBuscarAlumno.addEventListener('click', event=>{
+        event.preventDefault();
+        abrirVentana('busqueda_alumnos');
+    });
     frmAlumnos.addEventListener("submit",event=>{
         event.preventDefault();
-
         let datos = {
             accion : frmAlumnos.dataset.accion,
             idAlumno: frmAlumnos.dataset.idalumno,
@@ -84,33 +67,10 @@
         .then(respuesta=>{
             if( respuesta.msg=="ok" ){
                 limpiarDatosAlumnos();
-                mostrarDatosAlumnos();
             }
         });
     });
     
-    function eliminarAlumno(alumno){
-        if( confirm(`Esta seguro de eliminar a: ${alumno.nombre}`) ){
-            fetch("/alumnos", {
-                method: "POST",
-                body: JSON.stringify({accion: "eliminar", idAlumno: alumno.idAlumno})
-            }).then(resp=>resp.json())
-            .then(respuesta=>{
-                if( respuesta.msg=="ok" ){
-                    limpiarDatosAlumnos();
-                    mostrarDatosAlumnos();
-                }
-            });
-        }
-    }
-    function modificarAlumno(alumno){
-        frmAlumnos.dataset.accion = "modificar";
-        frmAlumnos.dataset.idalumno = alumno.idAlumno;
-        txtCodigoAlumnos.value = alumno.codigo;
-        txtNombreAlumnos.value = alumno.nombre;
-        txtDireccionAlumnos.value = alumno.direccion;
-        txtTelefonoAlumnos.value = alumno.telefono;
-    }
     function limpiarDatosAlumnos(){
         frmAlumnos.dataset.accion = "nuevo";
         frmAlumnos.dataset.idalumno = "-1";
@@ -118,24 +78,5 @@
         txtNombreAlumnos.value = "";
         txtDireccionAlumnos.value = "";
         txtTelefonoAlumnos.value = "";
-    }
-    function mostrarDatosAlumnos(){
-        fetch("/alumnos").then(resp=>resp.json())
-        .then(resp=>{
-            let $tblAlumnos = document.querySelector("#tblConsultaAlumnos > tbody"),
-                $filas = '';
-            resp.forEach(alumno => {
-                $filas += `
-                    <tr onClick='modificarAlumno(${ JSON.stringify(alumno) })'>
-                        <td>${alumno.codigo}</td>
-                        <td>${alumno.nombre}</td>
-                        <td>${alumno.direccion}</td>
-                        <td>${alumno.telefono}</td>
-                        <td><button onClick='eliminarAlumno(${ JSON.stringify(alumno) })' class="btn btn-danger">Eliminar</button></td>
-                    </tr>
-                `;
-            });
-            $tblAlumnos.innerHTML = $filas;
-        });
     }
 </script>
