--- a/busqueda_alumnos.html
+++ b/busqueda_alumnos.html
@@ -13,6 +13,13 @@
                 <table class="table table-sm table-hover table-dark" id="tblConsultaAlumnos">
                     <thead>
                         <tr>
+                            <th>Buscar:</th>
+                            <th colspan="4">
+                                <input type="text" name="txtBuscarAlumnos" id="txtBuscarAlumnos" 
+                                    class="form-control" onkeyup="buscarAlumnos(this.value)">
+                            </th>
+                        </tr>
+                        <tr>
                             <th>CODIGO</th>
                             <th>NOMBRE</th>
                             <th>DIRECCION</th>
@@ -27,10 +34,18 @@
     </div>
 </div>
 <script>
-     mostrarDatosAlumnos();
+    mostrarDatosAlumnos();
 
-     function mostrarDatosAlumnos(){
-        fetch("/alumnos").then(resp=>resp.json())
+    function buscarAlumnos(val){
+        mostrarDatosAlumnos(val);
+    }
+    
+     function mostrarDatosAlumnos(valor){
+        valor = valor || '';
+        fetch(`/buscar_alumnos`,{
+            method: 'POST',
+            body:j=JSON.stringify({buscar: valor})
+        }).then(resp=>resp.json())
         .then(resp=>{
             let $tblAlumnos = document.querySelector("#tblConsultaAlumnos > tbody"),
                 $filas = '';
